--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.10.4'
+        classpath 'com.android.tools.build:gradle:0.11.+'
         classpath 'com.github.gfx:android-power-assert-plugin:0.10.+'
     }
 }
